spacing issues

--- a/src/styles/filter.less
+++ b/src/styles/filter.less
@@ -63,13 +63,13 @@
     z-index: 100;
     filter: drop-shadow(0 0 0.75rem #ededed);
     width: 350px;
-    padding: 0rem 0.75rem 0.75rem 0.75rem;
+    padding: 0px 12px 12px 12px;
     overflow: scroll;
     max-height: 30vh;
     min-height: 220px;
 
     .tabs {
-      padding-top: 0.75rem;
+      padding-top: 12px;
       flex: 1 1 auto;
       display: flex;
       flex-flow: column nowrap;
@@ -92,7 +92,7 @@
 
       ul.nav li {
         width: 50%;
-        padding: 0.5rem 0;
+        padding: 8px 0;
         list-style: none;
         text-align: center;
         cursor: pointer;
@@ -190,7 +190,7 @@
     top: 42px;
     left: 0;
     border: 1px solid hsla(24, 11%, 64%, 0.3);
-    padding: 0.75rem;
+    padding: 12px;
     border-radius: 8px;
     z-index: 100;
     filter: drop-shadow(0 0 0.75rem #ededed);
