--- a/src/styles/panel.less
+++ b/src/styles/panel.less
@@ -2,7 +2,7 @@
   flex: 0 1 auto;
   font-size: 20px;
   line-height: 28px;
-  margin-bottom: 0.25rem;
+  margin-bottom: 4px;
   min-height: 56px;
   display: flex;
   justify-content: space-between;
@@ -46,7 +46,7 @@
 
   ul.nav li {
     // width: 33%;
-    padding: 1rem;
+    padding: 16px;
     list-style: none;
     text-align: center;
     cursor: pointer;
@@ -56,16 +56,16 @@
     letter-spacing: 0.2px;
 
     @media (max-width: 1200px) {
-      padding: 1rem 0.5rem;
+      padding: 16px 8px;
       font-size: 14px;
     }
 
     @media (max-width: 1100px) {
-      margin-right: 1.5rem;
+      margin-right: 24px;
       height: 36px;
     }
     @media (max-width: 500px) {
-      margin-right: 0.25rem;
+      margin-right: 4px;
     }
   }
 
@@ -194,7 +194,7 @@
         }
 
         .title {
-          margin: 0 0 0.25rem;
+          margin: 0 0 4px;
           font-weight: bold;
           color: #000;
         }
@@ -218,7 +218,7 @@
           border: none;
           cursor: pointer;
           text-align: left;
-          color: @ungray;
+          color: @undarkgray;
           display: flex;
           flex-wrap: wrap;
           font-size: 12px;
