--- a/src/styles/radial.less
+++ b/src/styles/radial.less
@@ -92,7 +92,7 @@
 
   .title {
     // font-size: 16px;
-    margin: 0 0 0.25rem;
+    margin: 0 0 4px;
     font-weight: bold;
     color: #000;
   }
@@ -116,7 +116,7 @@
     border: none;
     cursor: pointer;
     text-align: left;
-    color: @ungray;
+    color: @undarkgray;
     display: flex;
     flex-wrap: wrap;
     font-size: 12px;
