--- a/src/styles/styles.less
+++ b/src/styles/styles.less
@@ -17,7 +17,7 @@
     @import "filter.less";
     flex: 0 1 auto;
     margin: 0;
-    height: 4rem;
+    height: 64px;
     width: 100%;
     display: flex;
     justify-content: center;
@@ -25,7 +25,7 @@
 
   .visuals {
     flex: 1 0 auto;
-    gap: 2rem;
+    gap: 32px;
     display: flex;
     align-items: stretch;
     justify-content: center;
@@ -77,7 +77,7 @@
         flex-flow: column nowrap;
         background-color: hsl(24, 1%, 99%);
         border: 1px solid hsl(24, 10%, 85%);
-        padding: 1.25rem 1.5rem;
+        padding: 20px 24px;
         border-radius: 24px;
         width: 100%;
         overflow: hidden;
